# portals

./: Cargo.toml
assets/shaders/: custom_vertex_attribute.wgsl  screen_space.wgsl  texture_binding_array.wgsl
src/: global_resources.rs  main.rs
src/fps_controller/: cam.rs  controls.rs  mod.rs  movement.rs
src/portal/: custom_vertex_attribute.rs  mod.rs  portal_camera.rs  portal_cameras.rs  portal_pair.rs  portal_screen.rs  texture_binding_array.rs
src/test_scenes/: mod.rs
