[package]
name = "portals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy_rapier3d = { version = "0.21.0", features = [ "simd-stable", "debug-render-3d" ] }

bevy-inspector-egui = "0.18.1"
bevy-inspector-egui-rapier = "0.9.0"